--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_fonts: ^6.2.1
   mask_text_input_formatter: ^2.9.0
   flutter_keyboard_visibility: ^6.0.0
+  flutter_launcher_icons: ^0.14.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +49,14 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/pozitolk_icon.png"
+
+
 
   fonts:
     - family: MV-Crooker
