--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   flutter_launcher_icons: ^0.14.3
   url_launcher: ^6.3.1
+  intl_phone_number_field: ^0.2.1
+  intl_phone_field: ^3.2.0
+  intl: ^0.17.0
+  motion_tab_bar_v2: ^0.4.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +53,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+    - assets/countries/
 
 
 
