--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,139 +1,77 @@
 name: pozitolk
-description: A new Flutter project.
+description: "A new Flutter project."
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ^3.6.2
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  flutter_web_plugins:
-    sdk: flutter
-  auto_size_text: 3.0.0
-  cached_network_image: 3.4.1
-  cached_network_image_platform_interface: 4.1.1
-  cached_network_image_web: 1.3.1
-  collection: 1.19.0
-  flutter_animate: 4.5.0
-  flutter_cache_manager: 3.4.1
-  font_awesome_flutter: 10.7.0
-  from_css_color: 2.0.0
-  go_router: 12.1.3
-  google_fonts: 6.1.0
-  intl: 0.19.0
-  json_path: 0.7.2
-  page_transition: 2.1.0
-  path_provider: 2.1.4
-  path_provider_android: 2.2.10
-  path_provider_foundation: 2.4.0
-  path_provider_linux: 2.2.1
-  path_provider_platform_interface: 2.1.2
-  path_provider_windows: 2.3.0
-  provider: 6.1.2
-  shared_preferences: 2.3.2
-  shared_preferences_android: 2.3.2
-  shared_preferences_foundation: 2.5.2
-  shared_preferences_linux: 2.4.1
-  shared_preferences_platform_interface: 2.4.1
-  shared_preferences_web: 2.4.2
-  shared_preferences_windows: 2.4.1
-  sqflite: 2.3.3+1
-  sqflite_common: 2.5.4+3
-  timeago: 3.6.1
-  url_launcher: 6.3.0
-  url_launcher_android: 6.3.10
-  url_launcher_ios: 6.3.1
-  url_launcher_linux: 3.2.0
-  url_launcher_macos: 3.2.1
-  url_launcher_platform_interface: 2.3.2
-  url_launcher_web: 2.3.3
-  url_launcher_windows: 3.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.8
 
   # state management
+  provider: ^6.1.2
   # navigation
+  go_router: ^14.8.0
   # di
   get_it: ^8.0.3
   # local storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  shared_preferences: ^2.5.1
   # media
   flutter_svg: ^2.0.17
   # text style & text input
+  google_fonts: ^6.2.1
   mask_text_input_formatter: ^2.9.0
   flutter_keyboard_visibility: ^6.0.0
   flutter_launcher_icons: ^0.14.3
+  url_launcher: ^6.3.1
   intl_phone_number_field: ^0.2.1
   intl_phone_field: ^3.2.0
+  intl: ^0.17.0
   motion_tab_bar_v2: ^0.4.0
-  rename: ^3.0.2
-
-dependency_overrides:
-  http: 1.2.2
-  uuid: ^4.0.0
+  dio: ^5.7.0
+  fluttertoast: ^8.2.8
+  internet_connection_checker_plus: ^2.6.0
 
 dev_dependencies:
-  flutter_lints: 4.0.0
-  lints: 4.0.0
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  flutter_lints: ^5.0.0
 
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
     - assets/icons/
     - assets/fonts/
     - assets/countries/
 
+
+
   fonts:
     - family: MV-Crooker
       fonts:
+#        - asset: assets/fonts/MV-Crooker.ttf
         - asset: assets/fonts/crooker.otf
-  #  #       - asset: fonts/Schyler-Italic.ttf
-  #  #         style: italic
-  #  #   - family: Trajan Pro
-  #  #     fonts:
-  #  #       - asset: fonts/TrajanPro.ttf
-  #  #       - asset: fonts/TrajanPro_Bold.ttf
-  #  #         weight: 700
-  #  #
-  #  # For details regarding fonts from package dependencies,
-  #  # see https://flutter.dev/custom-fonts/#from-packages
-  #   - family: Schyler
+#    - family: okk
+#      fonts:
+#        - asset: fonts/McLaren-Regular.ttf
+  #         style: italic
+  #   - family: Trajan Pro
   #     fonts:
-  #
+  #       - asset: fonts/TrajanPro.ttf
 
 flutter_launcher_icons:
   android: true
