--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   dio: ^5.7.0
   fluttertoast: ^8.2.8
   internet_connection_checker_plus: ^2.6.0
+  cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
