--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   internet_connection_checker_plus: ^2.6.0
   cached_network_image: ^3.4.1
   image_picker: ^1.1.2
+  infinite_scroll_pagination: ^4.1.0
+  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   flutter_test:
