--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.1.2
   infinite_scroll_pagination: ^4.1.0
   web_socket_channel: ^3.0.3
+#  motion_tab_bar: ^2.0.4
 
 dev_dependencies:
   flutter_test:
