--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # local storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  shared_preferences: ^2.5.1
+#  shared_preferences: ^2.5.1
   # media
   flutter_svg: ^2.0.17
   # text style & text input
