--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   fl_chart: ^1.0.0
   syncfusion_flutter_charts: ^29.2.11
   youtube_player_iframe: ^5.2.1
+  youtube_player_flutter: ^9.1.1
 #  motion_tab_bar: ^2.0.4
 
 dev_dependencies:
